--- a/main.html
+++ b/main.html
@@ -10,8 +10,15 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
-  <p>hello world!</p>
+  <section class="page-header">
+    <h1 class="project-name">Ajax</h1>
+    <h2 class="project-tagline"></h2>
+    <a href="https://github.com/Cutty7Sark/test" class="btn">View on GitHub</a>
+    <a href="https://github.com/Cutty7Sark/test/zipball/m.." class="btn">Download .zip</a>
+    <a href="https://github.com/Cutty7Sark/test/tarball/m.." class="btn">Download .tar.gz</a>
+  </section>
 
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.js"></script>
   <script type="text/javascript">
   $(function {
     $.ajax({
