--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.js"></script>
   <script type="text/javascript">
-  $(function {
+  $(function () {
     $.ajax({
       url: 'http://cutty7sark.github.io/test/main.html',
       success: function() {
