--- a/main.html
+++ b/main.html
@@ -10,17 +10,11 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
+  <div>
+    <p>hello world!</p>
+  </div>
 
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.js"></script>
-  <script type="text/javascript">
-  $(function {
-    $.ajax({
-      url: 'http://cutty7sark.github.io/test/main.html',
-      success: function() {
-        alert('Load was performed');
-      }
-    });
-  });
-</script>
+
+  
   </body>
 </html>
