--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
-    <div class="main-content">
+    <div>
     <h1 class="project-name">Ajax</h1>
     <h2 class="project-tagline">blablabla</h2>
     <button>bang bang bang</button>
